<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen1">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/profileDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileTitle"
        android:paddingBottom="5dp"
        android:text="@string/welcome_desc"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/profileDesc"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:id="@+id/layerNickname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileDesc"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtNickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/nickname"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editNickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/enter_something"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/layerNickname"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:id="@+id/layerGender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layerNickname"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/gender"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:entries="@array/gender_array"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/layerGender"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:id="@+id/layerBirth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layerGender"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtBirth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/date_of_birth"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editBirth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/enter_something"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/layerBirth"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:id="@+id/layerHeight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layerBirth"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/height"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/enter_something"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/layerHeight"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:id="@+id/layerWeight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layerHeight"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/weight"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/enter_something"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/layerWeight"
        android:background="@color/colorDivider" />
</RelativeLayout>
</ScrollView>