<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/welcome_profile"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/profileDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileTitle"
        android:paddingBottom="5dp"
        android:text="@string/welcome_desc"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryText" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/profileDesc"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:id="@+id/layerNickname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileTitle"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/txtNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/nickname"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:hint="@string/enter_something"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/layerNickname"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:id="@+id/layerGender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layerNickname"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/gender"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:entries="@array/gender_array"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/layerGender"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:id="@+id/layerBirth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layerGender"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/date_of_birth"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/editBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:hint="@string/enter_something"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/layerBirth"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:id="@+id/layerHeight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layerBirth"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/height"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/editHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:hint="@string/enter_something"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/layerHeight"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:id="@+id/layerWeight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layerHeight"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/weight"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/editWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:hint="@string/enter_something"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/layerWeight"
        android:background="@color/colorDivider" />
</RelativeLayout>
