<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen1"
    tools:context="com.trinity.isabelle.fitami.Fragments.BadgeFragment">
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/fprofileDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingBottom="5dp"
            android:text="@string/welcome_desc"
            android:textAlignment="center"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@+id/fprofileDesc"
            android:background="@color/colorDivider" />

        <RelativeLayout
            android:id="@+id/flayerNickname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fprofileDesc"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/ftxtNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/nickname"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/feditNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="@string/enter_something"
                android:textSize="20sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@+id/flayerNickname"
            android:background="@color/colorDivider" />

        <RelativeLayout
            android:id="@+id/flayerGender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flayerNickname"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ftxtGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/gender"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/fspinnerGender"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:entries="@array/gender_array"
                android:textSize="20sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@+id/flayerGender"
            android:background="@color/colorDivider" />

        <RelativeLayout
            android:id="@+id/flayerBirth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flayerGender"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ftxtBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/date_of_birth"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/feditBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="@string/enter_something"
                android:textSize="20sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@+id/flayerBirth"
            android:background="@color/colorDivider" />

        <RelativeLayout
            android:id="@+id/flayerHeight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flayerBirth"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ftxtHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/height"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/feditHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="@string/enter_something"
                android:textSize="20sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@+id/flayerHeight"
            android:background="@color/colorDivider" />

        <RelativeLayout
            android:id="@+id/flayerWeight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/flayerHeight"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ftxtWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/weight"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/feditWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:hint="@string/enter_something"
                android:textSize="20sp" />

        </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/flayerWeight"
        android:background="@color/colorDivider" />

    <Button
        android:id="@+id/btnSaveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/flayerWeight"
        android:elevation="1dp"
        android:text="@string/button_text_save" />
</RelativeLayout>

</ScrollView>